src/test/ui/parser/struct-field-numeric-shorthand.stderr
error: expected identifier, found `0`
  --> $DIR/struct-field-numeric-shorthand.rs:6:19
   |
LL |     let _ = Rgb { 0, 1, 2 }; //~ ERROR expected identifier, found `0`
   |             ---   ^ expected identifier
   |             |
   |             while parsing this struct

error: aborting due to previous error

